--- a/My-App/src/main/resources/com/example/myapp/SignUp.fxml
+++ b/My-App/src/main/resources/com/example/myapp/SignUp.fxml
@@ -9,29 +9,32 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.myapp.SignUpController">
-    <children>
-        <AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: silver;">
-            <children>
-                <AnchorPane layoutY="100.0" prefHeight="300.0" prefWidth="701.0" style="-fx-background-color: white;">
-                    <children>
-                  <PasswordField fx:id="passwordField" layoutX="365.0" layoutY="82.0" prefHeight="25.0" prefWidth="183.0" promptText="Пароль" />
-                        <Button fx:id="authSignInButton" layoutX="284.0" layoutY="233.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="134.0" text="Зарегестрироваться" />
-                  <TextField fx:id="LoginField" layoutX="136.0" layoutY="82.0" prefHeight="25.0" prefWidth="183.0" promptText="Логин" />
-                  <TextField fx:id="NameField" layoutX="136.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0" promptText="Имя" />
-                  <TextField layoutX="365.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0" promptText="Фамилия" />
-                  <TextField fx:id="CountryField" layoutX="258.0" layoutY="138.0" prefHeight="25.0" prefWidth="183.0" promptText="Страна" />
-                  <TextField fx:id="LastNameField2" layoutX="365.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0" promptText="Фамилия" />
-                  <CheckBox fx:id="CheckBoxMale" layoutX="258.0" layoutY="190.0" mnemonicParsing="false" selected="true" text="Мужчина" />
-                  <CheckBox fx:id="CheckBoxFemale" layoutX="366.0" layoutY="190.0" mnemonicParsing="false" text="Женщина" />
-                    </children>
-                </AnchorPane>
-                <Label layoutX="288.0" layoutY="26.0" prefHeight="47.0" prefWidth="111.0" text="My-App" textFill="#f8f5f5">
-                    <font>
-                        <Font size="30.0" />
-                    </font>
-                </Label>
-            </children>
+<VBox prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/19"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.myapp.SignUpController">
+    <AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: silver;">
+        <AnchorPane layoutY="100.0" prefHeight="300.0" prefWidth="701.0" style="-fx-background-color: white;">
+            <PasswordField fx:id="passwordField" layoutX="365.0" layoutY="82.0" prefHeight="25.0"
+                           prefWidth="183.0" promptText="Пароль"/>
+            <Button fx:id="authSignInButton" layoutX="284.0" layoutY="233.0" mnemonicParsing="false"
+                    prefHeight="30.0" prefWidth="134.0" text="Зарегестрироваться"/>
+            <TextField fx:id="LoginField" layoutX="136.0" layoutY="82.0" prefHeight="25.0" prefWidth="183.0"
+                       promptText="Логин"/>
+            <TextField fx:id="NameField" layoutX="136.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0"
+                       promptText="Имя"/>
+            <TextField layoutX="365.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0" promptText="Фамилия"/>
+            <TextField fx:id="CountryField" layoutX="258.0" layoutY="138.0" prefHeight="25.0" prefWidth="183.0"
+                       promptText="Страна"/>
+            <TextField fx:id="LastNameField2" layoutX="365.0" layoutY="34.0" prefHeight="25.0" prefWidth="183.0"
+                       promptText="Фамилия"/>
+            <CheckBox fx:id="CheckBoxMale" layoutX="258.0" layoutY="190.0" mnemonicParsing="false"
+                      selected="true" text="Мужчина"/>
+            <CheckBox fx:id="CheckBoxFemale" layoutX="366.0" layoutY="190.0" mnemonicParsing="false"
+                      text="Женщина"/>
         </AnchorPane>
-    </children>
+        <Label layoutX="288.0" layoutY="26.0" prefHeight="47.0" prefWidth="111.0" text="My-App" textFill="#f8f5f5">
+            <font>
+                <Font size="30.0"/>
+            </font>
+        </Label>
+    </AnchorPane>
 </VBox>
